--- a/templates/index.html
+++ b/templates/index.html
@@ -598,7 +598,7 @@ nav{
         // Make prediction by calling api /predict
         $.ajax({
             type: 'POST',
-            url:'/'+ categ + '/' + '/predict',
+            url:'/'+ categ + '/predict',
             data: form_data,
             contentType: false,
             cache: false,
