--- a/templates/index.html
+++ b/templates/index.html
@@ -418,7 +418,7 @@ nav{
             </div>
         </div>
         <div> 
-            <button type="button" class="btn btn-primary btn-lg " onclick="save()" value="skincaner" id="btn-predict">Predict!</button>
+            <button type="button" class="btn btn-primary btn-lg " onclick="save()" value="skincancer" id="btn-predict">Predict!</button>
         </div>
     </div>
     </center>
