--- a/templates/index.html
+++ b/templates/index.html
@@ -450,7 +450,7 @@ nav{
                   <p id="result">
                      <span> </span>
                     </p>  </div>
-                     <div id="report"  style="display:none;">
+                     <div class="report"  style="display:none;">
                     <div id="desc"  style="display:none;">
         <div class="container-fluid">
             <div class="row">
